--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -85,12 +85,12 @@ body {
 }
 
 .title-1 {
-	margin-bottom: 60px;
+	margin-bottom: 10px;
 
 	font-size: 60px;
 	font-weight: 700;
 	line-height: 1.3;
-	color: var(--title-1);
+	color: black;
 	text-align: center;
 }
 
@@ -100,6 +100,11 @@ body {
 	font-size: 40px;
 	font-weight: 700;
 	line-height: 1.3;
+}
+
+.timeline__container {
+	width: 95%;
+	background-color: #bdbebd;
 }
 
 
@@ -213,9 +218,9 @@ body {
 }
 
 
-/* Project details */
+/* Robber personal */
 
-.project-details {
+.robber-personal {
 	margin: 0 auto;
 	max-width: 865px;
 
@@ -226,7 +231,7 @@ body {
 	text-align: center;
 }
 
-.project-details__cover {
+.robber-personal__cover {
 	max-width: 100%;
 	margin-bottom: 40px;
 
@@ -234,7 +239,7 @@ body {
 	border-radius: 10px;
 }
 
-.project-details__desc {
+.robber-personal__desc {
 	margin-bottom: 30px;
 
 	font-weight: 700;
@@ -316,9 +321,9 @@ body {
 		font-size: 22px;
 	}
 
-	/* Project page */
+	/* Robber page */
 
-	.project-details__desc {
+	.robber-personal__desc {
 		margin-bottom: 20px;
 		font-size: 22px;
 	}
