--- a/src/Components/header/headerstyle.css
+++ b/src/Components/header/headerstyle.css
@@ -18,6 +18,14 @@
 
 	color: var(--header-text);
 	text-align: center;
+
+	opacity: 0;
+  	animation: ani 2.5s forwards;
+}
+
+@keyframes ani {
+	0% {opacity: 0;}
+	100% {opacity: 1;}
 }
 
 .header__wrapper {
