--- a/src/Components/navigation/navbarstyle.css
+++ b/src/Components/navigation/navbarstyle.css
@@ -70,8 +70,17 @@
 	background-color: white;
 }
 
+@media screen and (max-width: 1170px) {
+	.nav-list {
+		column-gap: 5px;
+	}
+	.nav-row {
+		column-gap: 5px;
+		row-gap: 5px;
+	}
+}
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 787px) {
 
 	.nav-row {
 		column-gap: 25px;
