--- a/src/Components/main/mainpartstyle.css
+++ b/src/Components/main/mainpartstyle.css
@@ -3,4 +3,15 @@
     flex-direction: row;
 }
 
+.day-robber{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 80px;
+    
+}
 
+.description{
+    font-weight: 600;
+    font-size: 28px;
+}
