--- a/src/Components/main/mainpartstyle.css
+++ b/src/Components/main/mainpartstyle.css
@@ -3,6 +3,12 @@
     flex-direction: row;
 }
 
+@media screen and (max-width: 690px) {
+	.devs{
+		flex-direction: column;
+  }
+}
+
 .day-robber{
     display: flex;
     flex-direction: column;
