--- a/src/Components/robbers/robberstyle.css
+++ b/src/Components/robbers/robberstyle.css
@@ -1,6 +1,6 @@
 .project {
 	max-width: 370px;
-	background-color: var(--project-card-bg);
+	background-color: var(--robber-card-bg);
 	box-shadow: var(--box-shadow);
 	border-radius: 10px;
 }
@@ -15,5 +15,5 @@
 	font-weight: 700;
 	font-size: 24px;
 	line-height: 1.3;
-	color: var(--project-card-text);
+	color: var(--robber-card-text);
 }
