--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,8 +28,8 @@
 	--accent: var(--purple);
 	--title-1: var(--accent);
 
-	--project-card-bg: var(--white);
-	--project-card-text: var(--black);
+	--robber-card-bg: var(--white);
+	--robber-card-text: var(--black);
 	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
 }
 
